# pymake2

./: README.md  setup.cfg  utility.py
pymake2/: make.py  pymake2.py  utility.py
tests/: makefile.py
