[metadata]
name = pymake2
version = attr: setuptools_scm.get_version
description = pymake2 is a simple Python-based make system. It brings simplicity and flexibility of Python language to makefiles.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/saudalwasly/pymake2/src
author = Lionel Atty
author_email = lionel.atty@365talents.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
# https://github.com/pypa/setuptools_scm/issues/181
use_scm_version = True
setup_requires =
    setuptools_scm
install_requires =
    argcomplete
    sarge
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    pymake2 = pymake2.pymake2:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
